updating some html

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -75,8 +75,8 @@
     {% block base_content %}
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h1>cfbets</h1>
+        <p>We are going to make so many sweet bets. Betting is the best. True dat; double-true.</p>
         <p><a class="btn btn-primary btn-lg" href="/mybets" role="button">My Bets &raquo;</a></p>
       </div>
     </div>
