--- a/cfbets/templates/base_mybets.html
+++ b/cfbets/templates/base_mybets.html
@@ -4,6 +4,12 @@
 
     <div class="container">
         <h1>My Bets</h1>
+	{% if user.is_authenticated %}
+		<p> Hi, {{ user.get_full_name }}. You're logged in. </p>
+	{% else %}
+		<p> You're not logged in. You should <a href='/login'>log in</a>.</p>	
+	{% endif %}
+
     </div>
 
 {% endblock %}
