setup navigation, logins, views

--- a/cfbets/bets/templates/bets/base_mybets.html
+++ b/cfbets/bets/templates/bets/base_mybets.html
@@ -3,7 +3,7 @@
 {% block base_content %}
 
     <div class="container">
-        <h1>My Bets</h1>
+        <h1>Home: My Bets</h1>
 	{% if user.is_authenticated %}
 		<p> Hi, {{ user.get_full_name }}. You're logged in. </p>
 	{% else %}
