--- a/cfbets/templates/base_login.html
+++ b/cfbets/templates/base_login.html
@@ -5,12 +5,16 @@
 {% block base_content %}
 
   <div class="container">
+  {% if user.is_authenticated %}
+    <h3>You're already logged in as {{ user.get_full_name }}.</h3>
+  {% else %}
 	  <h2>Login</h2>
 	  <form method="post">
 	    {% csrf_token %}
 	    {{ form.as_p }}
 	    <button type="submit">Login</button>
 	  </form>
+  {% endif %}
   </div>
 
 {% endblock %}
