--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -45,12 +45,12 @@
             <li class="active"><a href="/">Home</a></li>
 
 	    {% if user.is_authenticated %}
-            <li><a href="/allbets">All Bets</a></li>
+            <li><a href="/all_bets">All Bets</a></li>
             <li><a href="/reporting">Reporting</a></li>
 	    {% endif %}
 
 	    {% if user.is_staff %}
-            <li><a href="/adminbets">Admin</a></li>
+            <li><a href="/admin_bets">Admin</a></li>
  	    {% endif %}
 	  </ul>
 
@@ -59,7 +59,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{ user.get_full_name }} <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Account Settings</a></li>
+                <li><a href="/account_settings">Account Settings</a></li>
                 <li><a href="/logout">Logout</a></li>
               </ul>
 	    {% else %}
