--- a/cfbets/templates/base_login.html
+++ b/cfbets/templates/base_login.html
@@ -12,7 +12,7 @@
 	  <form method="post">
 	    {% csrf_token %}
 	    {{ form.as_p }}
-	    <button type="submit">Login</button>
+	    <button type="submit" class="btn btn-primary">Login</button>
 	  </form>
   {% endif %}
   </div>
