registration form up

--- a/cfbets/bets/templates/bets/base_admin_bets.html
+++ b/cfbets/bets/templates/bets/base_admin_bets.html
@@ -3,7 +3,7 @@
 {% block base_content %}
 
     <div class="container">
-        <h1>Admin</h1>
+        <h1>Admin Bets</h1>
 	{% if user.is_authenticated %}
 		<p> Hi, {{ user.get_full_name }}. You're logged in. </p>
 	{% else %}
