--- a/cfbets/templates/base_welcome.html
+++ b/cfbets/templates/base_welcome.html
@@ -6,7 +6,10 @@
       <div class="container">
         <h1>cfbets</h1>
         <p>I'll bet you $5 that this webapp is going to be super sweet. Go ahead, try it.
-        <p><a class="btn btn-success btn-lg" href="/login" role="button">Login &raquo;</a></p>
+        <p><a class="btn btn-success btn-lg" href="/sign_up" role="button">Sign Up &raquo;</a></p>
+	<div style="border-top: 1px solid#888; padding-top:15px;" >
+ 	 Already have an account? <a href="/login"><small><u>Login here.</u></small></p></a>
+	</div>
       </div>
     </div>
 
