--- a/cfbets/templates/base_login.html
+++ b/cfbets/templates/base_login.html
@@ -14,6 +14,10 @@
 	    {{ form.as_p }}
 	    <button type="submit" class="btn btn-primary">Login</button>
 	  </form>
+
+	  <div style="border-top: 1px solid#888; padding-top:15px;" >
+ 	     Need an account? <a href="/sign_up"><small><u>Sign up here.</u></small></p></a>
+	  </div>
   {% endif %}
   </div>
 
