added views, changed nav

--- a/cfbets/templates/base_account_settings.html
+++ b/cfbets/templates/base_account_settings.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Account Settings{% endblock %}
 
 {% block base_content %}
 
@@ -36,7 +36,7 @@
                       </tr>
                     </tbody>
                   </table>
-                  <a href="#" class="btn btn-primary">Reset Password</a>
+                  <!-- <a href="#" class="btn btn-primary">Reset Password</a> -->
                 </div>
               </div>
             </div>
