--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -3,7 +3,7 @@
 {% block base_content %}
 
     <div class="container">
-        <h1>My Bets</h1>
+        <h1>Open Bets</h1>
 	  <p> Hi, {{ user.get_full_name }}. You're logged in. </p>
     </div>
 
