--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -42,11 +42,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
 
 	    {% if user.is_authenticated %}
+            <li class="active"><a href="/my_bets">My Bets</a></li>
+            <li><a href="/open_bets">Open Bets</a></li>
             <li><a href="/all_bets">All Bets</a></li>
-            <li><a href="/reporting">Reporting</a></li>
 	    {% endif %}
 
 	    {% if user.is_staff %}
