added admin links back in

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -63,6 +63,11 @@
 	    <li class="{% if nbar == 'my_bets' %}active{% endif %}"><a href="/my_bets">My Bets</a></li>
             <li class="{% if nbar == 'open_bets' %}active{% endif %}"><a href="/open_bets">Open Bets</a></li>
             <li class="{% if nbar == 'all_bets' %}active{% endif %}"><a href="/all_bets">All Bets</a></li>
+
+	    {% if user.is_staff %}
+            <li class="{% if nbar == 'admin_bets' %}active{% endif %}"><a href="/admin_bets">Admin Bets</a></li>
+            <li><a href="/admin">Admin Site</a></li>
+ 	    {% endif %}
       </ul>
      {% else %}
       <ul class="nav navbar-nav navbar-right">
