minor tweaks before merge

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -105,6 +105,7 @@
     <!-- End base_content block -->
     {% endblock %}
 
+	<!-- Place Bets form modal -->
 	<div class="modal fade" id="place_bets" tabindex="-1" role="dialog" aria-labelledby="PlaceBets">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
