--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -19,10 +19,9 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'assets/css/jumbotron.css' %}" rel="stylesheet">
-
-    <!-- datetime picker css -->
-    <link rel="stylesheet" media="all" type="text/css" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
-    <link href="{% static 'assets/css/jquery-ui-timepicker-addon.css' %}" rel="stylesheet">
+	
+	<!-- datetimepicker css -->
+    <link href="{% static 'assets/css/jquery.datetimepicker.min.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -141,40 +140,44 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src=" {% static 'assets/js/jquery.min.js' %}"><\/script>')</script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'assets/js/jquery-ui.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'assets/js/ie10-viewport-bug-workaround.js' %}"></script>
     <!-- datetime picker js -->
-    <script src="{% static 'assets/js/jquery-ui-timepicker-addon.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.datetimepicker.full.min.js' %}"></script>
 
     <!-- datetime picker for the place bets form and ajax for that form -->
     <script type='text/javascript'>
     $(document).ready(function() {
-        $('#id_bet_expiration_date').datetimepicker(); 
+		$('#id_bet_expiration_date').datetimepicker({
+			format: 'm/d/Y H:i'
+		}); 
+
 		$("#messages").fadeTo(3500, 500).slideUp(500, function(){
-			$("#messages").slideUp(500);
+				$("#messages").slideUp(500);
 		});
 
-	$('#place-bets-form').on('submit', function(event) {
-		event.preventDefault();
-		$.ajax({ 
-		    type: "POST",
-		    url: this.action, 
-		    data: $(this).serialize(),
-		    context: this,
+		$('#place-bets-form').on('submit', function(event) {
+			event.preventDefault();
+			$.ajax({ 
+				type: "POST",
+				url: this.action, 
+				data: $(this).serialize(),
+				context: this,
 
-		    success: function(data, status) {
-			window.location.href = data.url;
-		    },
+				success: function(data, status) {
+				window.location.href = data.url;
+				},
 
-		    error: function(xhr, status, error) {
-			$("#place-bets-form").html(xhr.responseText);
-        		$('#id_bet_expiration_date').datetimepicker(); 
-		    }
-		});
-		return false;
-	    });
-        });
+				error: function(xhr, status, error) {
+					$("#place-bets-form").html(xhr.responseText);
+					$('#id_bet_expiration_date').datetimepicker({
+						format: 'm/d/Y H:i'
+					}); 
+				}
+			});
+			return false;
+			});
+	});
     </script>
 	
   </body>
