update place bet form css

--- a/cfbets/bets/templates/bets/place_bets.html
+++ b/cfbets/bets/templates/bets/place_bets.html
@@ -12,7 +12,7 @@
 			    </div>
 			</div>
 		    {% else %}
-			<div class="control-group">
+			<div class="control-group" id="place-bet-group">
 			    <label class="control-label">{{ field.label }}</label> 
 			    <div class="controls">{{ field }}
 				{% if field.help_text %}
