--- a/cfbets/static/assets/css/jumbotron.css
+++ b/cfbets/static/assets/css/jumbotron.css
@@ -18,6 +18,8 @@ form#place-bets-form input {
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
+	border: 2px solid #d3d3d3;
+    border-radius: 4px;
 }
 
 
@@ -31,4 +33,8 @@ form#place-bets-form input#id_qty_allowed {
 
 form#place-bets-form input#id_bet_amount {
     width: 100px;
+}
+
+#place-bet-group {
+	padding-bottom: 10px;
 }
