fix up signup and login forms

--- a/cfbets/static/assets/css/jumbotron.css
+++ b/cfbets/static/assets/css/jumbotron.css
@@ -14,8 +14,8 @@ a#profile:hover {
 	color: #fff;
 }
 
-form#place-bets-form input {
-    padding: 12px 20px;
+form input {
+    padding: 12px 15px;
     margin: 8px 0;
     box-sizing: border-box;
 	border: 2px solid #d3d3d3;
