--- a/cfbets/templates/base_login.html
+++ b/cfbets/templates/base_login.html
@@ -4,21 +4,50 @@
 
 {% block base_content %}
 
-  <div class="container">
-  {% if user.is_authenticated %}
-    <h3>You're already logged in as {{ user.get_full_name }}.</h3>
-  {% else %}
-	  <h2>Login</h2>
-	  <form method="post">
-	    {% csrf_token %}
-	    {{ form.as_p }}
-	    <button type="submit" class="btn btn-primary">Login</button>
-	  </form>
+<div class="container" style="max-width: 750px;">
+	{% if user.is_authenticated %}
+		<h3>You're already logged in as {{ user.get_full_name }}.</h3>
+	{% else %}
+		<h2>Login</h2>
+			<p>Need an account? <a href="/sign_up"><small><u>Sign up here.</u></small></p></a>
+			<hr>
+			<form class="form-horizontal" method="post">{% csrf_token %}
+				{% if form.non_field_errors %}
+					<div class="alert alert-danger">{{ form.non_field_errors|join:"<br \>" }}</div>
+				{% endif %}
 
-	  <div style="border-top: 1px solid#888; padding-top:15px;" >
- 	     Need an account? <a href="/sign_up"><small><u>Sign up here.</u></small></p></a>
-	  </div>
-  {% endif %}
-  </div>
+				{% for field in form %}
+				{% if field.errors %}
+					<div class="control-group error">
+						<label class="control-label">{{ field.label }}</label> 
+						<div class="controls">{{ field }}
+							<p class="help-inline text-danger">
+								{% for error in  field.errors %}<strong>{{ error }}</strong>{% endfor %}
+							</p>
+						</div>
+					</div>
+
+				{% else %}
+					<div class="control-group">
+						<label class="control-label">{{ field.label }}</label> 
+						<div class="controls">{{ field }}
+							{% if field.help_text %}
+							<p class="help-inline"><small>{{ field.help_text }}</small></p>
+							{% endif %}
+						</div>
+					</div>
+
+					{% endif %}
+					{% endfor %}
+
+					<br/>
+					<div class="form-actions">
+					<button type="submit" class="btn btn-primary" >Log in</button>
+					</div>
+
+				</form>
+
+			{% endif %}
+</div>
 
 {% endblock %}
